# imgdedup

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
imgdedup/: __init__.py  cli.py  cluster.py  compare.py  crops.py  hasher.py  index.py  reporter.py  scanner.py
tests/: test_cli.py  test_cluster.py  test_compare.py  test_crop_detection.py  test_crops.py  test_hasher.py  test_index.py  test_reporter.py  test_scanner.py
